[package]
name = "sokoban"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fuzzing = ["arbitrary"]

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive_arbitrary"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
libfuzzer-sys = "0.4.2"
