[package]
name = "sokoban"
version = "0.2.0"
edition = "2021"
description = "A general-purpose sokoban solution verifier."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tamuctf/sokoban.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fuzzing = ["arbitrary"]

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive_arbitrary"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
libfuzzer-sys = "0.4.2"
